--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,6 +56,10 @@ jobs:
       - name: 🔨 • Prebuild Android
         run: npx expo prebuild -p android --clean
 
+      - name: 📝 • Configure Gradle Memory
+        run: |
+          echo "org.gradle.jvmargs=-Xmx8g -Dorg.gradle.daemon=true" >> android/gradle.properties
+
       - name: 🏗️ • Build Android
         run: |
           cd android
