--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,6 @@ jobs:
   build_android:
     runs-on: ubuntu-latest
     if: ${{ inputs.build_android }}
-    needs: [clean]
     steps:
       - uses: actions/checkout@v4
 
@@ -151,7 +150,6 @@ jobs:
   build_ios:
     runs-on: macos-latest
     if: ${{ inputs.build_ios }}
-    needs: [clean]
     steps:
       - uses: actions/checkout@v4
 
@@ -229,6 +227,7 @@ jobs:
       - name: 🔐 • Setup iOS Signing
         run: |
           echo "${{ secrets.IOS_CERTIFICATE_P12 }}" | base64 --decode > certificate.p12
-
           KEYCHAIN_PASSWORD="temp-build-$(date +%s)"
-          security create
+          security create-keychain -p "$KEYCHAIN_PASSWORD" build.keychain
+          security default-keychain -s build.keychain
+          security
