--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@nozbe/watermelondb": "^0.28.0",
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-masked-view/masked-view": "^0.3.2",
-    "@react-native-menu/menu": "^2.0.0",
+    "@react-native-menu/menu": "1.2.4",
     "@react-navigation/elements": "^2.6.2",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
@@ -90,7 +90,7 @@
     "react-native-graph": "^1.1.0",
     "react-native-htmlview": "^0.17.0",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-mmkv": "^3.3.3",
+    "react-native-mmkv": "^3.3.0",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
