--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,6 +49,9 @@ jobs:
           node-version: '20'
           cache: 'npm'
 
+      - name: 🗂️ • Refaire lock
+        run: npm install
+
       - name: 🗂️ • Install Node Dependencies
         run: npm ci --legacy-peer-deps
 
