--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,4 @@
 name: Build Applications
-
 on:
   workflow_dispatch:
     inputs:
@@ -19,44 +18,18 @@ on:
         description: 'Sign iOS IPA'
         type: boolean
         default: false
-      clean_cache:
-        description: 'Disable all caches (slower but ensures a fresh build)'
+      fresh_build:
+        description: 'Force Fresh Build (no cache)'
         type: boolean
         default: false
 
 jobs:
-  # ===== CLEAN JOB =====
-  clean:
+  # ===== CACHE CHECK =====
+  check_cache:
     runs-on: ubuntu-latest
-    if: ${{ inputs.build_android && inputs.clean_cache }}
     steps:
-      - name: 🧹 • Clean Gradle Cache
-        run: |
-          echo "Désactivation du cache demandée. Suppression des caches Gradle."
-          rm -rf $HOME/.gradle/caches/
-          rm -rf node_modules
-
-  # ===== ANDROID BUILD =====
-  build_android:
-    runs-on: ubuntu-latest
-    if: ${{ inputs.build_android }}
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: 📀 • Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-
-      - name: 🗂️ • Install Node Dependencies
-        run: npm ci --legacy-peer-deps
-
-      - name: 🔨 • Prebuild Android
-        run: npx expo prebuild -p android --clean
-
-      - name: 📦 • Cache Gradle Dependencies
-        if: ${{ !inputs.clean_cache }}
+      - name: 💾 • Try Restore Gradle Cache
+        id: gradle_cache
         uses: actions/cache@v4
         with:
           path: |
@@ -65,21 +38,99 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
+          enableCrossOsArchive: true
+        continue-on-error: true
 
+      - name: 📋 • Report Cache Status
+        run: |
+          if [ "${{ steps.gradle_cache.outputs.cache-hit }}" = "true" ]; then
+            echo "cache_status=hit" >> $GITHUB_ENV
+          else
+            echo "cache_status=miss" >> $GITHUB_ENV
+          fi
+
+  clean:
+    runs-on: ubuntu-latest
+    if: ${{ inputs.build_android || inputs.build_ios }}
+    steps:
+      - name: 🧹 • Clean Environment
+        run: |
+          if [ "${{ inputs.fresh_build }}" = "true" ]; then
+            rm -rf node_modules
+            rm -rf ~/Library/Developer/Xcode/DerivedData
+            rm -rf $HOME/.gradle/caches/
+            rm -rf ~/.npm
+            rm -rf ~/.expo
+          else
+            echo "Skipping full clean, caches will be reused."
+          fi
+
+  # ===== ANDROID BUILD =====
+  build_android:
+    needs: [clean]
+    runs-on: ubuntu-latest
+    if: ${{ inputs.build_android }}
+    steps:
+      - uses: actions/checkout@v4
+     
+      - name: 📀 • Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          
       - name: ☕ • Setup Java
         uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
           java-version: '17'
 
-      - name: 📝 • Configure Gradle Memory (Optimisation)
-        run: echo "org.gradle.jvmargs=-Xmx8g -Dorg.gradle.daemon=true -Dorg.gradle.parallel=true" >> android/gradle.properties
+      - name: 💾 • Restore Gradle Cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+          enableCrossOsArchive: true
+        if: ${{ inputs.fresh_build == false }}
+        
+      - name: 💾 • Restore NDK Cache
+        uses: actions/cache@v4
+        with:
+          path: $ANDROID_HOME/ndk
+          key: ${{ runner.os }}-ndk
+        if: ${{ inputs.fresh_build == false }}
 
-      - name: 🏗️ • Build Android
+      - name: 🗂️ • Install Node Dependencies
+        run: npm ci --legacy-peer-deps
+        
+      - name: 🔨 • Prebuild Android
+        run: npx expo prebuild -p android --clean
+
+      - name: 📝 • Configure Gradle Memory + Daemon
+        run: |
+          echo "org.gradle.jvmargs=-Xmx8g -Dorg.gradle.daemon=true -Dorg.gradle.parallel=true -Dorg.gradle.configureondemand=true" >> android/gradle.properties
+          echo "android.useAndroidX=true" >> android/gradle.properties
+          echo "android.enableJetifier=true" >> android/gradle.properties
+          echo "org.gradle.caching=true" >> android/gradle.properties
+
+      - name: 🏗️ • Build Android (Optimized)
         run: |
           cd android
-          ./gradlew assembleRelease --parallel
+          ./gradlew assembleRelease --build-cache --parallel --daemon --configure-on-demand --max-workers=$(nproc)
           cp app/build/outputs/apk/release/app-release.apk app/build/outputs/apk/release/Papillon.apk
+
+      - name: 💾 • Save Gradle Cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+        if: ${{ inputs.fresh_build == false }}
 
       - name: 🌍 • Upload APK
         uses: actions/upload-artifact@v4
@@ -90,8 +141,8 @@ jobs:
 
   # ===== ANDROID SIGNING =====
   sign_android:
-    runs-on: ubuntu-latest
     needs: build_android
+    runs-on: ubuntu-latest
     if: ${{ inputs.sign_android && inputs.build_android }}
     steps:
       - name: 🔍 • Check Android Signing Secrets
@@ -125,7 +176,8 @@ jobs:
           path: ./
 
       - name: 🔐 • Setup Android Signing
-        run: echo "${{ secrets.ANDROID_KEYSTORE }}" | base64 --decode > release.keystore
+        run: |
+          echo "${{ secrets.ANDROID_KEYSTORE }}" | base64 --decode > release.keystore
 
       - name: ✍️ • Sign Android APK
         run: |
@@ -136,8 +188,9 @@ jobs:
             --key-pass pass:"${{ secrets.ANDROID_KEY_PASSWORD }}" \
             --out Papillon-signed.apk \
             Papillon.apk
-
-          $ANDROID_HOME/build-tools/$(ls $ANDROID_HOME/build-tools | tail -1)/apksigner verify Papillon-signed.apk
+          
+          $ANDROID_HOME/build-tools/$(ls $ANDROID_HOME/build-tools | tail -1)/apksigner verify \
+            Papillon-signed.apk
 
       - name: 🌍 • Upload Signed APK
         uses: actions/upload-artifact@v4
@@ -148,20 +201,21 @@ jobs:
 
   # ===== iOS BUILD =====
   build_ios:
+    needs: clean
     runs-on: macos-latest
     if: ${{ inputs.build_ios }}
     steps:
       - uses: actions/checkout@v4
-
+     
       - name: 📀 • Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
-
+          
       - name: 🗂️ • Install Node Dependencies
         run: npm ci --legacy-peer-deps
-
+        
       - name: 🔨 • Prebuild iOS
         run: npx expo prebuild -p ios --clean
 
@@ -198,8 +252,8 @@ jobs:
 
   # ===== iOS SIGNING =====
   sign_ios:
-    runs-on: macos-latest
     needs: build_ios
+    runs-on: macos-latest
     if: ${{ inputs.sign_ios && inputs.build_ios }}
     steps:
       - name: 🔍 • Check iOS Signing Secrets
@@ -227,7 +281,117 @@ jobs:
       - name: 🔐 • Setup iOS Signing
         run: |
           echo "${{ secrets.IOS_CERTIFICATE_P12 }}" | base64 --decode > certificate.p12
+          
           KEYCHAIN_PASSWORD="temp-build-$(date +%s)"
+          
           security create-keychain -p "$KEYCHAIN_PASSWORD" build.keychain
           security default-keychain -s build.keychain
-          security
+          security unlock-keychain -p "$KEYCHAIN_PASSWORD" build.keychain
+          security set-keychain-settings -lut 21600 build.keychain
+          
+          security import certificate.p12 -k build.keychain -P "${{ secrets.IOS_CERTIFICATE_PASSWORD }}" -T /usr/bin/codesign
+          security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "$KEYCHAIN_PASSWORD" build.keychain
+          
+          echo "KEYCHAIN_PASSWORD=$KEYCHAIN_PASSWORD" >> $GITHUB_ENV
+
+      - name: ✍️ • Sign iOS IPA
+        run: |
+          mkdir -p TempPayload
+          cd TempPayload
+          unzip -q ../Papillon.ipa
+          
+          echo "🔍 Auto-detecting signing identity..."
+          SIGN_IDENTITY=$(security find-identity -v -p codesigning build.keychain | grep -o '"[^"]*"' | head -1 | tr -d '"')
+          
+          echo "✍️ Signing with development certificate..."
+          codesign --force --sign "$SIGN_IDENTITY" \
+                   --timestamp \
+                   Payload/Papillon.app
+          
+          echo "🔍 Verifying signature..."
+          codesign --verify --verbose Payload/Papillon.app
+          
+          zip -r ../Papillon-signed.ipa Payload
+          cd ..
+          rm -rf TempPayload
+
+      - name: 🌍 • Upload Signed IPA
+        uses: actions/upload-artifact@v4
+        with:
+          name: ios-ipa-signed
+          path: Papillon-signed.ipa
+          if-no-files-found: error
+
+  # ===== SUMMARY =====
+  summary:
+    needs: [check_cache, build_android, build_ios, sign_android, sign_ios]
+    runs-on: ubuntu-latest
+    if: always()
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
+
+      - name: 📋 • Build Summary
+        run: |
+          APP_VERSION=$(node -p "require('./package.json').version")
+          COMMIT_ID=$(git rev-parse --short HEAD)
+
+          echo "## Build Summary 📱" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "📙 **App Version**: $APP_VERSION ($COMMIT_ID)" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+
+          echo "💾 **Cache Status**:" >> $GITHUB_STEP_SUMMARY
+          if [ "${{ env.cache_status }}" = "hit" ]; then
+            echo "   - Gradle Cache: ✅ Hit" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "   - Gradle Cache: ❌ Miss" >> $GITHUB_STEP_SUMMARY
+          fi
+          echo "" >> $GITHUB_STEP_SUMMARY
+          
+          echo "🤖 **Android APK**:" >> $GITHUB_STEP_SUMMARY
+          if [ "${{ inputs.build_android }}" == "true" ]; then
+            if [ "${{ needs.build_android.result }}" == "success" ]; then
+              echo "   - 📦 Unsigned APK: ✅ Success" >> $GITHUB_STEP_SUMMARY
+            else
+              echo "   - 📦 Unsigned APK: ❌ Failed" >> $GITHUB_STEP_SUMMARY
+            fi
+            
+            if [ "${{ inputs.sign_android }}" == "true" ]; then
+              if [ "${{ needs.sign_android.result }}" == "success" ]; then
+                echo "   - ✍️ Signed APK: ✅ Success" >> $GITHUB_STEP_SUMMARY
+              else
+                echo "   - ✍️ Signed APK: ❌ Failed" >> $GITHUB_STEP_SUMMARY
+              fi
+            else
+              echo "   - ✍️ Signed APK: ⏭️ Skipped" >> $GITHUB_STEP_SUMMARY
+            fi
+          else
+            echo "   - 📦 Unsigned APK: ⏭️ Skipped" >> $GITHUB_STEP_SUMMARY
+            echo "   - ✍️ Signed APK: ⏭️ Skipped" >> $GITHUB_STEP_SUMMARY
+          fi
+          
+          echo "" >> $GITHUB_STEP_SUMMARY
+          
+          echo "🍎 **iOS IPA**:" >> $GITHUB_STEP_SUMMARY
+          if [ "${{ inputs.build_ios }}" == "true" ]; then
+            if [ "${{ needs.build_ios.result }}" == "success" ]; then
+              echo "   - 📦 Unsigned IPA: ✅ Success" >> $GITHUB_STEP_SUMMARY
+            else
+              echo "   - 📦 Unsigned IPA: ❌ Failed" >> $GITHUB_STEP_SUMMARY
+            fi
+            
+            if [ "${{ inputs.sign_ios }}" == "true" ]; then
+              if [ "${{ needs.sign_ios.result }}" == "success" ]; then
+                echo "   - ✍️ Signed IPA: ✅ Success" >> $GITHUB_STEP_SUMMARY
+              else
+                echo "   - ✍️ Signed IPA: ❌ Failed" >> $GITHUB_STEP_SUMMARY
+              fi
+            else
+              echo "   - ✍️ Signed IPA: ⏭️ Skipped" >> $GITHUB_STEP_SUMMARY
+            fi
+          else
+            echo "   - 📦 Unsigned IPA: ⏭️ Skipped" >> $GITHUB_STEP_SUMMARY
+            echo "   - ✍️ Signed IPA: ⏭️ Skipped" >> $GITHUB_STEP_SUMMARY
+          fi
